--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,22 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+    //lombok
+    //compile 대신 compileOnly 사용
+    compileOnly('org.projectlombok:lombok')
+
+    //jpa
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    //h2 인메모리 관계형 데이터베이스
+    compile('com.h2database:h2')
+
+    //mustache 템플릿
+    compile('org.springframework.boot:spring-boot-starter-mustache')
 }
 
 /*
+//프로젝트 최초 생성 시 부분
 plugins {
     id 'java'
 }
